--- a/index.html
+++ b/index.html
@@ -1,182 +1,150 @@
 <!DOCTYPE html>
 <html>
-<html lang="en">
-  <head>
-  <title>Matt Lynner Portfolio</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <script src="typed.js"></script>
-    <script src="javascript.js"></script>
-  </head>
+<head>
+	<title>Matt Lynner Portfolio</title>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+	<script src="javascript.js"></script>
+</head>
 
-  <body>
-    <!-- Navigation Section -->
+<body>
+	<!-- Navigation Section -->
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container text-right">
+			<h1 class="text-light">Matt Lynner | Web Developer</h1>
+			<p class="text-light">Minneapolis, MN</p>
+		</div>
+	</div>
 
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="about.html">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="projects.html">Projects</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="contact.html">Contact</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
 
-      <div class="jumbotron jumbotron-fluid">
-        <div class="container introText">
-          <h1 class="display-4">Matt Lynner | Web Developer</h1>
-           <p class="lead">Minneapolis, MN</p>
-        </div>
-      </div>
+	<div class="container">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="projects.html">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+		<!--Welcome Section-->
+		<h1 class="mt-4">Welcome</h1>
+		<p>Thank you for taking a look at my page! Feel free to click through some of the websites and applications I've built below or visit my <a href="projects.html">projects page</a> for more information.
 
-    <!--header image-->
+		<hr class="hrstyle">
 
-    <!--Welcome Section-->
-    <div class="container application-header">
-      <h1>Welcome</h1>
-      <p>Thank you for taking a look at my page! Feel free to click through some of the websites and applications I've built below or visit my <a href="projects.html">projects page</a> for more information.
-    </div>
+		<!-- Image Gallery-->
+		<div class="row">
+			<div class="col-md-4">
+				<div class="hovereffect">
+					<img class="img-responsive" src="images/TCstrength.png" alt="TCstrength" height="100%">
+						<div class="overlay">
+							<h2>Twin Cities Strength</h2>
+							<a href="#" target="_blank">View Site</a>
+						</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="hovereffect">
+					<img class="img-responsive" src="images/hairchateau.png" alt="Hair" height="100%">
+						<div class="overlay">
+							<h2>The Hair Chateau</h2>
+							<a href="http://www.thehairchateau.org" target="_blank">View Site</a>
+						</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="hovereffect">
+					<img class="img-responsive" src="images/Flexben.png" alt="Flexben"
+					height="100%">
+						<div class="overlay">
+							<h2>Flexible Benefits Consulting</h2>
+							<a href="#" target="_blank">View Site</a>
+						</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="hovereffect">
+					<img class="img-responsive" src="images/colorgame.png" alt="ColorGame" height="100%">
+						<div class="overlay">
+							<h2>The Great Color Guessing Game</h2>
+							<a href="ColorGuessingGame/color.html" target="_blank">View Project</a>
+						</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="hovereffect">
+					<img class="img-responsive" src="images/quotemachine.png" alt="Quotes" height="100%">
+						<div class="overlay">
+							<h2>Random Quote Machine</h2>
+							<a href="quotes/index.html">View Project</a>
+						</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="hovereffect">
+					<img class="img-responsive" src="images/calculator.png" alt="Calc" height="100%">
+						<div class="overlay">
+							<h2>Calculator</h2>
+							<a href="calculator/index.html" target="_blank">View Project</a>
+						</div>
+				</div>
+			</div>
+		</div>
 
-<hr class="hrstyle">
+		<hr class="hrstyle">
 
-    <!-- Image Gallery-->
-<div class="container-fluid">
-  <div class="row">
-   <div class="col-md-4">
-      <div class="hovereffect">
-          <img class="img-responsive" src="images/TCstrength.png" alt="TCstrength" height="100%">
-              <div class="overlay">
-                  <h2>Twin Cities Strength</h2>
-  				<p>
-  					<a href="http://www.twincitiesstrength.com" target="_blank">View Site</a>
-  				</p>
-              </div>
-      </div>
-  </div>
-  <div class="col-md-4">
-      <div class="hovereffect">
-          <img class="img-responsive" src="images/hairchateau.png" alt="Hair"
-          height="100%">
-              <div class="overlay">
-                  <h2>The Hair Chateau</h2>
-            				<p>
-            					Coming Soon!
-            				</p>
-              </div>
-      </div>
-  </div>
+		<!--CONTACT FORM-->
+		<h1 class="text-center">Contact Me</h1>
+		<p class="text-center">Questions?</p>
 
-  <div class="col-md-4">
-      <div class="hovereffect">
-          <img class="img-responsive" src="images/Flexben.png" alt="Flexben"
-          height="100%">
-              <div class="overlay">
-                  <h2>Flexible Benefits Consulting</h2>
-  				<p>
-  					Coming Soon!
-  				</p>
-              </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
-       <div class="hovereffect">
-           <img class="img-responsive" src="images/colorgame.png" alt="ColorGame" height="100%">
-               <div class="overlay">
-                   <h2>The Great Color Guessing Game</h2>
-   				<p>
-   					<a href="ColorGuessingGame/color.html" target="_blank">View Project</a>
-   				</p>
-               </div>
-       </div>
-   </div>
-       <div class="col-md-4">
-          <div class="hovereffect">
-              <img class="img-responsive" src="images/quotemachine.png" alt="Quotes" height="100%">
-                  <div class="overlay">
-                      <h2>Random Quote Machine</h2>
-      				<p>
-      					<a href="quotes/index.html">View Project</a>
-      				</p>
-                  </div>
-          </div>
-      </div>
-      <div class="col-md-4">
-         <div class="hovereffect">
-             <img class="img-responsive" src="images/calculator.png" alt="Calc" height="100%">
-                 <div class="overlay">
-                     <h2>Calculator</h2>
-             <p>
-               <a href="calculator/index.html" target="_blank">View Project</a>
-             </p>
-                 </div>
-         </div>
-     </div>
-  </div>
-</div>
+		<div class="row">
+			<form class="col" action="https://formspree.io/matthewlynner@gmail.com" method="POST">
+				<div class="form-group">
+					<label for="Name">Name</label>
+					<input type="text" class="form-control" id="FirstName" placeholder="First Name" name="name">
+				</div>
+				<div class="form-group">
+					<label for="Email">Email address</label>
+					<input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Enter email" name="_replyto">
+					<small id="emailHelp" class="form-text text-muted">I'll never share your email with anyone else.</small>
+				</div>
+				<div class="form-group">
+					<label for="Message">Message</label>
+					<textarea class="form-control" id="Message" rows="3" name="Message"></textarea>
+				</div>
+				<button type="submit" class="btn btn-secondary" value="Send">Submit</button>
+			</form>
+		</div>
+	</div>
 
-<hr class="hrstyle">
-
-<!--CONTACT FORM-->
-<div class="container application-header">
-  <h1>Contact Me</h1>
-    <p>Questions?</p>
-</div>
-
-<div class="container form-container">
-<form action="https://formspree.io/matthewlynner@gmail.com" method="POST">
-  <div class="form-group">
-    <label for="Name">Name</label>
-    <input type="text" class="form-control" id="FirstName" placeholder="First Name" name="name">
-  </div>
-  <div class="form-group">
-    <label for="Email">Email address</label>
-    <input type="email" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="Enter email" name="_replyto">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="Message">Message</label>
-    <textarea class="form-control" id="Message" rows="3" name="Message"></textarea>
-  </div>
-  <button type="submit" class="btn btn-secondary" value="Send">Submit</button>
-</form>
-</div>
-
-<!--END CONTACT FORM-->
+</body>
 
 <footer>
-  <div class="footer-icons">
-
-  </div>
-  <div class="container text-center">
-    Matthew Lynner 2018
-  </div>
+	<div class="text-center">Matthew Lynner 2020</div>
 </footer>
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-
-  </body>
 </html>
